Add Steps, add Feature and Story annotations, correct some names. Automated allure report.